[gd_scene load_steps=25 format=3 uid="uid://bg6fkjj0kc0tx"]

[ext_resource type="Script" uid="uid://banx56j2rx7t0" path="res://objects/chest/chest.gd" id="1_f2ppc"]
[ext_resource type="Texture2D" uid="uid://bl3j7uk5wqphe" path="res://assets/Chroma-Noir-v2.1/Chroma-Noir-8x8/Interactables.png" id="2_141al"]
[ext_resource type="Texture2D" uid="uid://gw23isqhaw70" path="res://assets/Chroma-Noir-v2.1/Chroma-Noir-8x8/Items.png" id="3_141al"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5rr60"]
size = Vector2(8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rr60"]
atlas = ExtResource("3_141al")
region = Rect2(16, 32, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hgct"]
atlas = ExtResource("3_141al")
region = Rect2(16, 40, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vgg6"]
atlas = ExtResource("3_141al")
region = Rect2(16, 48, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_siel3"]
atlas = ExtResource("3_141al")
region = Rect2(16, 56, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_h21wd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rr60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hgct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vgg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_siel3")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_6q1eq"]
atlas = ExtResource("3_141al")
region = Rect2(24, 32, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_h56hm"]
atlas = ExtResource("3_141al")
region = Rect2(24, 40, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_fk110"]
atlas = ExtResource("3_141al")
region = Rect2(24, 48, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_k56kc"]
atlas = ExtResource("3_141al")
region = Rect2(24, 56, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_w8b6h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6q1eq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h56hm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fk110")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k56kc")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_6ewyb"]
atlas = ExtResource("3_141al")
region = Rect2(32, 32, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_hui4s"]
atlas = ExtResource("3_141al")
region = Rect2(32, 40, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nq4d"]
atlas = ExtResource("3_141al")
region = Rect2(32, 48, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hwj3"]
atlas = ExtResource("3_141al")
region = Rect2(32, 56, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_clqd1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ewyb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hui4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nq4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hwj3")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_g8tsr"]
atlas = ExtResource("3_141al")
region = Rect2(0, 56, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_i27q5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8tsr")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_8ms8l"]
atlas = ExtResource("3_141al")
region = Rect2(8, 56, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ch3ch"]
atlas = ExtResource("3_141al")
region = Rect2(8, 40, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_boclg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ms8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ch3ch")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Chest" type="Area2D"]
collision_layer = 0
collision_mask = 256
script = ExtResource("1_f2ppc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(4, 4)
shape = SubResource("RectangleShape2D_5rr60")

[node name="Sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(4, 4)
texture = ExtResource("2_141al")
region_enabled = true
region_rect = Rect2(16, 168, 8, 8)

[node name="LittleMoney" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
visible = false
sprite_frames = SubResource("SpriteFrames_h21wd")
frame_progress = 0.0875967

[node name="DecentMoney" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
visible = false
sprite_frames = SubResource("SpriteFrames_w8b6h")
frame_progress = 0.00571396

[node name="GoodMoney" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
visible = false
sprite_frames = SubResource("SpriteFrames_clqd1")
frame_progress = 0.185985

[node name="GreatMoney" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
visible = false
sprite_frames = SubResource("SpriteFrames_i27q5")

[node name="Life" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
visible = false
sprite_frames = SubResource("SpriteFrames_boclg")
